// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/basic/descriptions/demo/basic.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-descriptions"
  >
    <div
      class="dcloud-descriptions-header"
    >
      <div
        class="dcloud-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="dcloud-descriptions-view"
    >
      <table>
        <tbody>
          <tr
            class="dcloud-descriptions-row"
          >
            <td
              class="dcloud-descriptions-item"
              colspan="1"
            >
              <div
                class="dcloud-descriptions-item-container"
              >
                <span
                  class="dcloud-descriptions-item-label"
                >
                  UserName
                </span>
                <span
                  class="dcloud-descriptions-item-content"
                >
                  Zhou Maomao
                </span>
              </div>
            </td>
            <td
              class="dcloud-descriptions-item"
              colspan="1"
            >
              <div
                class="dcloud-descriptions-item-container"
              >
                <span
                  class="dcloud-descriptions-item-label"
                >
                  Telephone
                </span>
                <span
                  class="dcloud-descriptions-item-content"
                >
                  1810000000
                </span>
              </div>
            </td>
            <td
              class="dcloud-descriptions-item"
              colspan="1"
            >
              <div
                class="dcloud-descriptions-item-container"
              >
                <span
                  class="dcloud-descriptions-item-label"
                >
                  Live
                </span>
                <span
                  class="dcloud-descriptions-item-content"
                >
                  Hangzhou, Zhejiang
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="dcloud-descriptions-row"
          >
            <td
              class="dcloud-descriptions-item"
              colspan="1"
            >
              <div
                class="dcloud-descriptions-item-container"
              >
                <span
                  class="dcloud-descriptions-item-label"
                >
                  Remark
                </span>
                <span
                  class="dcloud-descriptions-item-content"
                >
                  empty
                </span>
              </div>
            </td>
            <td
              class="dcloud-descriptions-item"
              colspan="2"
            >
              <div
                class="dcloud-descriptions-item-container"
              >
                <span
                  class="dcloud-descriptions-item-label"
                >
                  Address
                </span>
                <span
                  class="dcloud-descriptions-item-content"
                >
                  No. 18, Wantang Road, Xihu District, Hangzhou, Zhejiang, China
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/descriptions/demo/border.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-descriptions dcloud-descriptions-bordered"
  >
    <div
      class="dcloud-descriptions-header"
    >
      <div
        class="dcloud-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="dcloud-descriptions-view"
    >
      <table>
        <tbody>
          <tr
            class="dcloud-descriptions-row"
          >
            <th
              class="dcloud-descriptions-item-label"
              colspan="1"
            >
              <span>
                Product
              </span>
            </th>
            <td
              class="dcloud-descriptions-item-content"
              colspan="1"
            >
              <span>
                Cloud Database
              </span>
            </td>
            <th
              class="dcloud-descriptions-item-label"
              colspan="1"
            >
              <span>
                Billing Mode
              </span>
            </th>
            <td
              class="dcloud-descriptions-item-content"
              colspan="1"
            >
              <span>
                Prepaid
              </span>
            </td>
            <th
              class="dcloud-descriptions-item-label"
              colspan="1"
            >
              <span>
                Automatic Renewal
              </span>
            </th>
            <td
              class="dcloud-descriptions-item-content"
              colspan="1"
            >
              <span>
                YES
              </span>
            </td>
          </tr>
          <tr
            class="dcloud-descriptions-row"
          >
            <th
              class="dcloud-descriptions-item-label"
              colspan="1"
            >
              <span>
                Order time
              </span>
            </th>
            <td
              class="dcloud-descriptions-item-content"
              colspan="1"
            >
              <span>
                2018-04-24 18:00:00
              </span>
            </td>
            <th
              class="dcloud-descriptions-item-label"
              colspan="1"
            >
              <span>
                Usage Time
              </span>
            </th>
            <td
              class="dcloud-descriptions-item-content"
              colspan="3"
            >
              <span>
                2019-04-24 18:00:00
              </span>
            </td>
          </tr>
          <tr
            class="dcloud-descriptions-row"
          >
            <th
              class="dcloud-descriptions-item-label"
              colspan="1"
            >
              <span>
                Status
              </span>
            </th>
            <td
              class="dcloud-descriptions-item-content"
              colspan="5"
            >
              <span>
                <span
                  class="dcloud-badge dcloud-badge-status dcloud-badge-not-a-wrapper"
                >
                  <span
                    class="dcloud-badge-status-dot dcloud-badge-status-processing"
                  />
                  <span
                    class="dcloud-badge-status-text"
                  >
                    Running
                  </span>
                </span>
              </span>
            </td>
          </tr>
          <tr
            class="dcloud-descriptions-row"
          >
            <th
              class="dcloud-descriptions-item-label"
              colspan="1"
            >
              <span>
                Negotiated Amount
              </span>
            </th>
            <td
              class="dcloud-descriptions-item-content"
              colspan="1"
            >
              <span>
                $80.00
              </span>
            </td>
            <th
              class="dcloud-descriptions-item-label"
              colspan="1"
            >
              <span>
                Discount
              </span>
            </th>
            <td
              class="dcloud-descriptions-item-content"
              colspan="1"
            >
              <span>
                $20.00
              </span>
            </td>
            <th
              class="dcloud-descriptions-item-label"
              colspan="1"
            >
              <span>
                Official Receipts
              </span>
            </th>
            <td
              class="dcloud-descriptions-item-content"
              colspan="1"
            >
              <span>
                $60.00
              </span>
            </td>
          </tr>
          <tr
            class="dcloud-descriptions-row"
          >
            <th
              class="dcloud-descriptions-item-label"
              colspan="1"
            >
              <span>
                Config Info
              </span>
            </th>
            <td
              class="dcloud-descriptions-item-content"
              colspan="5"
            >
              <span>
                Data disk type: MongoDB
                <br />
                Database version: 3.4
                <br />
                Package: dds.mongo.mid
                <br />
                Storage space: 10 GB
                <br />
                Replication factor: 3
                <br />
                Region: East China 1
                <br />
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/descriptions/demo/responsive.md correctly 1`] = `
LoadedCheerio {
  "0": <div>
    <div
      class="dcloud-descriptions dcloud-descriptions-bordered"
    >
      <div
        class="dcloud-descriptions-header"
      >
        <div
          class="dcloud-descriptions-title"
        >
          Responsive Descriptions
        </div>
      </div>
      <div
        class="dcloud-descriptions-view"
      >
        <table>
          <tbody>
            <tr
              class="dcloud-descriptions-row"
            >
              <th
                class="dcloud-descriptions-item-label"
                colspan="1"
              >
                <span>
                  Product
                </span>
              </th>
              <td
                class="dcloud-descriptions-item-content"
                colspan="1"
              >
                <span>
                  Cloud Database
                </span>
              </td>
              <th
                class="dcloud-descriptions-item-label"
                colspan="1"
              >
                <span>
                  Billing
                </span>
              </th>
              <td
                class="dcloud-descriptions-item-content"
                colspan="1"
              >
                <span>
                  Prepaid
                </span>
              </td>
              <th
                class="dcloud-descriptions-item-label"
                colspan="1"
              >
                <span>
                  time
                </span>
              </th>
              <td
                class="dcloud-descriptions-item-content"
                colspan="1"
              >
                <span>
                  18:00:00
                </span>
              </td>
            </tr>
            <tr
              class="dcloud-descriptions-row"
            >
              <th
                class="dcloud-descriptions-item-label"
                colspan="1"
              >
                <span>
                  Amount
                </span>
              </th>
              <td
                class="dcloud-descriptions-item-content"
                colspan="1"
              >
                <span>
                  $80.00
                </span>
              </td>
              <th
                class="dcloud-descriptions-item-label"
                colspan="1"
              >
                <span>
                  Discount
                </span>
              </th>
              <td
                class="dcloud-descriptions-item-content"
                colspan="1"
              >
                <span>
                  $20.00
                </span>
              </td>
              <th
                class="dcloud-descriptions-item-label"
                colspan="1"
              >
                <span>
                  Official
                </span>
              </th>
              <td
                class="dcloud-descriptions-item-content"
                colspan="1"
              >
                <span>
                  $60.00
                </span>
              </td>
            </tr>
            <tr
              class="dcloud-descriptions-row"
            >
              <th
                class="dcloud-descriptions-item-label"
                colspan="1"
              >
                <span>
                  Config Info
                </span>
              </th>
              <td
                class="dcloud-descriptions-item-content"
                colspan="5"
              >
                <span>
                  Data disk type: MongoDB
                  <br />
                  Database version: 3.4
                  <br />
                  Package: dds.mongo.mid
                  <br />
                  Storage space: 10 GB
                  <br />
                  Replication factor: 3
                  <br />
                  Region: East China 1
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/descriptions/demo/size.md correctly 1`] = `
LoadedCheerio {
  "0": <div>
    <div
      class="dcloud-radio-group dcloud-radio-group-outline"
    >
      <label
        class="dcloud-radio-wrapper dcloud-radio-wrapper-checked"
      >
        <span
          class="dcloud-radio dcloud-radio-checked"
        >
          <input
            checked=""
            class="dcloud-radio-input"
            type="radio"
            value="default"
          />
          <span
            class="dcloud-radio-inner"
          />
        </span>
        <span>
          default
        </span>
      </label>
      <label
        class="dcloud-radio-wrapper"
      >
        <span
          class="dcloud-radio"
        >
          <input
            class="dcloud-radio-input"
            type="radio"
            value="middle"
          />
          <span
            class="dcloud-radio-inner"
          />
        </span>
        <span>
          middle
        </span>
      </label>
      <label
        class="dcloud-radio-wrapper"
      >
        <span
          class="dcloud-radio"
        >
          <input
            class="dcloud-radio-input"
            type="radio"
            value="small"
          />
          <span
            class="dcloud-radio-inner"
          />
        </span>
        <span>
          small
        </span>
      </label>
    </div>
    <br />
    <br />
    <div
      class="dcloud-descriptions dcloud-descriptions-bordered"
    >
      <div
        class="dcloud-descriptions-header"
      >
        <div
          class="dcloud-descriptions-title"
        >
          Custom Size
        </div>
        <div
          class="dcloud-descriptions-extra"
        >
          <button
            class="dcloud-btn dcloud-btn-primary"
            type="button"
          >
            <span>
              Edit
            </span>
          </button>
        </div>
      </div>
      <div
        class="dcloud-descriptions-view"
      >
        <table>
          <tbody>
            <tr
              class="dcloud-descriptions-row"
            >
              <th
                class="dcloud-descriptions-item-label"
                colspan="1"
              >
                <span>
                  Product
                </span>
              </th>
              <td
                class="dcloud-descriptions-item-content"
                colspan="1"
              >
                <span>
                  Cloud Database
                </span>
              </td>
              <th
                class="dcloud-descriptions-item-label"
                colspan="1"
              >
                <span>
                  Billing
                </span>
              </th>
              <td
                class="dcloud-descriptions-item-content"
                colspan="1"
              >
                <span>
                  Prepaid
                </span>
              </td>
              <th
                class="dcloud-descriptions-item-label"
                colspan="1"
              >
                <span>
                  time
                </span>
              </th>
              <td
                class="dcloud-descriptions-item-content"
                colspan="1"
              >
                <span>
                  18:00:00
                </span>
              </td>
            </tr>
            <tr
              class="dcloud-descriptions-row"
            >
              <th
                class="dcloud-descriptions-item-label"
                colspan="1"
              >
                <span>
                  Amount
                </span>
              </th>
              <td
                class="dcloud-descriptions-item-content"
                colspan="1"
              >
                <span>
                  $80.00
                </span>
              </td>
              <th
                class="dcloud-descriptions-item-label"
                colspan="1"
              >
                <span>
                  Discount
                </span>
              </th>
              <td
                class="dcloud-descriptions-item-content"
                colspan="1"
              >
                <span>
                  $20.00
                </span>
              </td>
              <th
                class="dcloud-descriptions-item-label"
                colspan="1"
              >
                <span>
                  Official
                </span>
              </th>
              <td
                class="dcloud-descriptions-item-content"
                colspan="1"
              >
                <span>
                  $60.00
                </span>
              </td>
            </tr>
            <tr
              class="dcloud-descriptions-row"
            >
              <th
                class="dcloud-descriptions-item-label"
                colspan="1"
              >
                <span>
                  Config Info
                </span>
              </th>
              <td
                class="dcloud-descriptions-item-content"
                colspan="5"
              >
                <span>
                  Data disk type: MongoDB
                  <br />
                  Database version: 3.4
                  <br />
                  Package: dds.mongo.mid
                  <br />
                  Storage space: 10 GB
                  <br />
                  Replication factor: 3
                  <br />
                  Region: East China 1
                  <br />
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <br />
    <br />
    <div
      class="dcloud-descriptions"
    >
      <div
        class="dcloud-descriptions-header"
      >
        <div
          class="dcloud-descriptions-title"
        >
          Custom Size
        </div>
        <div
          class="dcloud-descriptions-extra"
        >
          <button
            class="dcloud-btn dcloud-btn-primary"
            type="button"
          >
            <span>
              Edit
            </span>
          </button>
        </div>
      </div>
      <div
        class="dcloud-descriptions-view"
      >
        <table>
          <tbody>
            <tr
              class="dcloud-descriptions-row"
            >
              <td
                class="dcloud-descriptions-item"
                colspan="1"
              >
                <div
                  class="dcloud-descriptions-item-container"
                >
                  <span
                    class="dcloud-descriptions-item-label"
                  >
                    Product
                  </span>
                  <span
                    class="dcloud-descriptions-item-content"
                  >
                    Cloud Database
                  </span>
                </div>
              </td>
              <td
                class="dcloud-descriptions-item"
                colspan="1"
              >
                <div
                  class="dcloud-descriptions-item-container"
                >
                  <span
                    class="dcloud-descriptions-item-label"
                  >
                    Billing
                  </span>
                  <span
                    class="dcloud-descriptions-item-content"
                  >
                    Prepaid
                  </span>
                </div>
              </td>
              <td
                class="dcloud-descriptions-item"
                colspan="1"
              >
                <div
                  class="dcloud-descriptions-item-container"
                >
                  <span
                    class="dcloud-descriptions-item-label"
                  >
                    time
                  </span>
                  <span
                    class="dcloud-descriptions-item-content"
                  >
                    18:00:00
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class="dcloud-descriptions-row"
            >
              <td
                class="dcloud-descriptions-item"
                colspan="1"
              >
                <div
                  class="dcloud-descriptions-item-container"
                >
                  <span
                    class="dcloud-descriptions-item-label"
                  >
                    Amount
                  </span>
                  <span
                    class="dcloud-descriptions-item-content"
                  >
                    $80.00
                  </span>
                </div>
              </td>
              <td
                class="dcloud-descriptions-item"
                colspan="1"
              >
                <div
                  class="dcloud-descriptions-item-container"
                >
                  <span
                    class="dcloud-descriptions-item-label"
                  >
                    Discount
                  </span>
                  <span
                    class="dcloud-descriptions-item-content"
                  >
                    $20.00
                  </span>
                </div>
              </td>
              <td
                class="dcloud-descriptions-item"
                colspan="1"
              >
                <div
                  class="dcloud-descriptions-item-container"
                >
                  <span
                    class="dcloud-descriptions-item-label"
                  >
                    Official
                  </span>
                  <span
                    class="dcloud-descriptions-item-content"
                  >
                    $60.00
                  </span>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/descriptions/demo/style.md correctly 1`] = `
LoadedCheerio {
  "0": <button
    aria-checked="true"
    class="dcloud-switch dcloud-switch-checked"
    role="switch"
    type="button"
  >
    <div
      class="dcloud-switch-handle"
    />
    <span
      class="dcloud-switch-inner"
    >
      Border
    </span>
  </button>,
  "1": <div
    class="dcloud-divider dcloud-divider-horizontal"
    role="separator"
  />,
  "2": <div
    class="dcloud-radio-group dcloud-radio-group-outline"
  >
    <label
      class="dcloud-radio-wrapper dcloud-radio-wrapper-checked"
    >
      <span
        class="dcloud-radio dcloud-radio-checked"
      >
        <input
          checked=""
          class="dcloud-radio-input"
          type="radio"
          value="horizontal"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        horizontal
      </span>
    </label>
    <label
      class="dcloud-radio-wrapper"
    >
      <span
        class="dcloud-radio"
      >
        <input
          class="dcloud-radio-input"
          type="radio"
          value="vertical"
        />
        <span
          class="dcloud-radio-inner"
        />
      </span>
      <span>
        vertical
      </span>
    </label>
  </div>,
  "3": <div
    class="dcloud-divider dcloud-divider-horizontal"
    role="separator"
  />,
  "4": <div
    class="dcloud-descriptions dcloud-descriptions-bordered"
  >
    <div
      class="dcloud-descriptions-header"
    >
      <div
        class="dcloud-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="dcloud-descriptions-view"
    >
      <table>
        <tbody>
          <tr
            class="dcloud-descriptions-row"
          >
            <th
              class="dcloud-descriptions-item-label"
              colspan="1"
              style="background-color:red;text-align:rgiht"
            >
              <span>
                Product
              </span>
            </th>
            <td
              class="dcloud-descriptions-item-content"
              colspan="1"
              style="background:green"
            >
              <span>
                Cloud Database
              </span>
            </td>
            <th
              class="dcloud-descriptions-item-label"
              colspan="1"
            >
              <span>
                Billing Mode
              </span>
            </th>
            <td
              class="dcloud-descriptions-item-content"
              colspan="1"
            >
              <span>
                Prepaid
              </span>
            </td>
            <th
              class="dcloud-descriptions-item-label"
              colspan="1"
            >
              <span>
                Automatic Renewal
              </span>
            </th>
            <td
              class="dcloud-descriptions-item-content"
              colspan="1"
            >
              <span>
                YES
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>,
  "5": <div
    class="dcloud-divider dcloud-divider-horizontal"
    role="separator"
  />,
  "6": <div
    class="dcloud-descriptions dcloud-descriptions-bordered"
  >
    <div
      class="dcloud-descriptions-header"
    >
      <div
        class="dcloud-descriptions-title"
      >
        Root style
      </div>
    </div>
    <div
      class="dcloud-descriptions-view"
    >
      <table>
        <tbody>
          <tr
            class="dcloud-descriptions-row"
          >
            <th
              class="dcloud-descriptions-item-label"
              colspan="1"
              style="background:red;text-align:rgiht"
            >
              <span>
                Product
              </span>
            </th>
            <td
              class="dcloud-descriptions-item-content"
              colspan="1"
              style="background:green"
            >
              <span>
                Cloud Database
              </span>
            </td>
            <th
              class="dcloud-descriptions-item-label"
              colspan="1"
              style="background:red;text-align:rgiht"
            >
              <span>
                Billing Mode
              </span>
            </th>
            <td
              class="dcloud-descriptions-item-content"
              colspan="1"
              style="background:green"
            >
              <span>
                Prepaid
              </span>
            </td>
            <th
              class="dcloud-descriptions-item-label"
              colspan="1"
              style="background:red;text-align:end;color:orange"
            >
              <span>
                Automatic Renewal
              </span>
            </th>
            <td
              class="dcloud-descriptions-item-content"
              colspan="1"
              style="background:green;color:blue"
            >
              <span>
                YES
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 7,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/descriptions/demo/text.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-descriptions"
  >
    <div
      class="dcloud-descriptions-header"
    >
      <div
        class="dcloud-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="dcloud-descriptions-view"
    >
      <table>
        <tbody>
          <tr
            class="dcloud-descriptions-row"
          >
            <td
              class="dcloud-descriptions-item"
              colspan="1"
            >
              <div
                class="dcloud-descriptions-item-container"
              >
                <span
                  class="dcloud-descriptions-item-label"
                >
                  Product
                </span>
                <span
                  class="dcloud-descriptions-item-content"
                >
                  Cloud Database
                </span>
              </div>
            </td>
            <td
              class="dcloud-descriptions-item"
              colspan="1"
            >
              <div
                class="dcloud-descriptions-item-container"
              >
                <span
                  class="dcloud-descriptions-item-label"
                >
                  <div
                    style="display:flex"
                  >
                    Billing Mode
                  </div>
                </span>
                <span
                  class="dcloud-descriptions-item-content"
                >
                  Prepaid
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="dcloud-descriptions-row"
          >
            <td
              class="dcloud-descriptions-item"
              colspan="1"
            >
              <div
                class="dcloud-descriptions-item-container"
              >
                <span
                  class="dcloud-descriptions-item-label"
                >
                  Automatic Renewal
                </span>
                <span
                  class="dcloud-descriptions-item-content"
                >
                  YES
                </span>
              </div>
            </td>
            <td
              class="dcloud-descriptions-item"
              colspan="1"
            >
              <div
                class="dcloud-descriptions-item-container"
              >
                <span
                  class="dcloud-descriptions-item-label"
                >
                  Order time
                </span>
                <span
                  class="dcloud-descriptions-item-content"
                >
                  2018-04-24 18:00:00
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="dcloud-descriptions-row"
          >
            <td
              class="dcloud-descriptions-item"
              colspan="2"
            >
              <div
                class="dcloud-descriptions-item-container"
              >
                <span
                  class="dcloud-descriptions-item-label"
                >
                  Usage Time
                </span>
                <span
                  class="dcloud-descriptions-item-content"
                >
                  2019-04-24 18:00:00
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="dcloud-descriptions-row"
          >
            <td
              class="dcloud-descriptions-item"
              colspan="2"
            >
              <div
                class="dcloud-descriptions-item-container"
              >
                <span
                  class="dcloud-descriptions-item-label"
                >
                  Status
                </span>
                <span
                  class="dcloud-descriptions-item-content"
                >
                  <span
                    class="dcloud-badge dcloud-badge-status dcloud-badge-not-a-wrapper"
                  >
                    <span
                      class="dcloud-badge-status-dot dcloud-badge-status-processing"
                    />
                    <span
                      class="dcloud-badge-status-text"
                    >
                      Running
                    </span>
                  </span>
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="dcloud-descriptions-row"
          >
            <td
              class="dcloud-descriptions-item"
              colspan="1"
            >
              <div
                class="dcloud-descriptions-item-container"
              >
                <span
                  class="dcloud-descriptions-item-label"
                >
                  Negotiated Amount
                </span>
                <span
                  class="dcloud-descriptions-item-content"
                >
                  $80.00
                </span>
              </div>
            </td>
            <td
              class="dcloud-descriptions-item"
              colspan="1"
            >
              <div
                class="dcloud-descriptions-item-container"
              >
                <span
                  class="dcloud-descriptions-item-label"
                >
                  Discount
                </span>
                <span
                  class="dcloud-descriptions-item-content"
                >
                  $20.00
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="dcloud-descriptions-row"
          >
            <td
              class="dcloud-descriptions-item"
              colspan="1"
            >
              <div
                class="dcloud-descriptions-item-container"
              >
                <span
                  class="dcloud-descriptions-item-label"
                >
                  Official Receipts
                </span>
                <span
                  class="dcloud-descriptions-item-content"
                >
                  $60.00
                </span>
              </div>
            </td>
            <td
              class="dcloud-descriptions-item"
              colspan="1"
            >
              <div
                class="dcloud-descriptions-item-container"
              >
                <span
                  class="dcloud-descriptions-item-label"
                >
                  Config Info
                </span>
                <span
                  class="dcloud-descriptions-item-content"
                >
                  Data disk type: MongoDB
                  <br />
                  Database version: 3.4
                  <br />
                  Package: dds.mongo.mid
                  <br />
                  Storage space: 10 GB
                  <br />
                  Replication factor: 3
                  <br />
                  Region: East China 1
                  <br />
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="dcloud-descriptions-row"
          >
            <td
              class="dcloud-descriptions-item"
              colspan="1"
            >
              <div
                class="dcloud-descriptions-item-container"
              >
                <span
                  class="dcloud-descriptions-item-label"
                >
                  Official Receipts
                </span>
                <span
                  class="dcloud-descriptions-item-content"
                >
                  $60.00
                </span>
              </div>
            </td>
            <td
              class="dcloud-descriptions-item"
              colspan="1"
            >
              <div
                class="dcloud-descriptions-item-container"
              >
                <span
                  class="dcloud-descriptions-item-label"
                >
                  Config Info
                </span>
                <span
                  class="dcloud-descriptions-item-content"
                >
                  <div
                    class="dcloud-table-wrapper"
                  >
                    <div
                      class="dcloud-spin-nested-loading"
                    >
                      <div
                        class="dcloud-spin-container"
                      >
                        <div
                          class="dcloud-table dcloud-table-small"
                        >
                          <div
                            class="dcloud-table-container"
                          >
                            <div
                              class="dcloud-table-content"
                            >
                              <table
                                style="table-layout:auto"
                              >
                                <colgroup />
                                <thead
                                  class="dcloud-table-thead"
                                >
                                  <tr>
                                    <th
                                      class="dcloud-table-cell"
                                    >
                                      姓名
                                    </th>
                                    <th
                                      class="dcloud-table-cell"
                                    >
                                      年龄
                                    </th>
                                    <th
                                      class="dcloud-table-cell"
                                    >
                                      住址
                                    </th>
                                  </tr>
                                </thead>
                                <tbody
                                  class="dcloud-table-tbody"
                                >
                                  <tr
                                    class="dcloud-table-row dcloud-table-row-level-0"
                                    data-row-key="1"
                                  >
                                    <td
                                      class="dcloud-table-cell"
                                    >
                                      胡彦斌
                                    </td>
                                    <td
                                      class="dcloud-table-cell"
                                    >
                                      32
                                    </td>
                                    <td
                                      class="dcloud-table-cell"
                                    >
                                      西湖区湖底公园1号
                                    </td>
                                  </tr>
                                  <tr
                                    class="dcloud-table-row dcloud-table-row-level-0"
                                    data-row-key="2"
                                  >
                                    <td
                                      class="dcloud-table-cell"
                                    >
                                      胡彦祖
                                    </td>
                                    <td
                                      class="dcloud-table-cell"
                                    >
                                      42
                                    </td>
                                    <td
                                      class="dcloud-table-cell"
                                    >
                                      西湖区湖底公园1号
                                    </td>
                                  </tr>
                                </tbody>
                              </table>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/descriptions/demo/vertical.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-descriptions"
  >
    <div
      class="dcloud-descriptions-header"
    >
      <div
        class="dcloud-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="dcloud-descriptions-view"
    >
      <table>
        <tbody>
          <tr
            class="dcloud-descriptions-row"
          >
            <th
              class="dcloud-descriptions-item"
              colspan="1"
            >
              <div
                class="dcloud-descriptions-item-container"
              >
                <span
                  class="dcloud-descriptions-item-label"
                >
                  UserName
                </span>
              </div>
            </th>
            <th
              class="dcloud-descriptions-item"
              colspan="1"
            >
              <div
                class="dcloud-descriptions-item-container"
              >
                <span
                  class="dcloud-descriptions-item-label"
                >
                  Telephone
                </span>
              </div>
            </th>
            <th
              class="dcloud-descriptions-item"
              colspan="1"
            >
              <div
                class="dcloud-descriptions-item-container"
              >
                <span
                  class="dcloud-descriptions-item-label"
                >
                  Live
                </span>
              </div>
            </th>
          </tr>
          <tr
            class="dcloud-descriptions-row"
          >
            <td
              class="dcloud-descriptions-item"
              colspan="1"
            >
              <div
                class="dcloud-descriptions-item-container"
              >
                <span
                  class="dcloud-descriptions-item-content"
                >
                  Zhou Maomao
                </span>
              </div>
            </td>
            <td
              class="dcloud-descriptions-item"
              colspan="1"
            >
              <div
                class="dcloud-descriptions-item-container"
              >
                <span
                  class="dcloud-descriptions-item-content"
                >
                  1810000000
                </span>
              </div>
            </td>
            <td
              class="dcloud-descriptions-item"
              colspan="1"
            >
              <div
                class="dcloud-descriptions-item-container"
              >
                <span
                  class="dcloud-descriptions-item-content"
                >
                  Hangzhou, Zhejiang
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="dcloud-descriptions-row"
          >
            <th
              class="dcloud-descriptions-item"
              colspan="2"
            >
              <div
                class="dcloud-descriptions-item-container"
              >
                <span
                  class="dcloud-descriptions-item-label"
                >
                  Address
                </span>
              </div>
            </th>
            <th
              class="dcloud-descriptions-item"
              colspan="1"
            >
              <div
                class="dcloud-descriptions-item-container"
              >
                <span
                  class="dcloud-descriptions-item-label"
                >
                  Remark
                </span>
              </div>
            </th>
          </tr>
          <tr
            class="dcloud-descriptions-row"
          >
            <td
              class="dcloud-descriptions-item"
              colspan="2"
            >
              <div
                class="dcloud-descriptions-item-container"
              >
                <span
                  class="dcloud-descriptions-item-content"
                >
                  No. 18, Wantang Road, Xihu District, Hangzhou, Zhejiang, China
                </span>
              </div>
            </td>
            <td
              class="dcloud-descriptions-item"
              colspan="1"
            >
              <div
                class="dcloud-descriptions-item-container"
              >
                <span
                  class="dcloud-descriptions-item-content"
                >
                  empty
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/descriptions/demo/vertical-border.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-descriptions dcloud-descriptions-bordered"
  >
    <div
      class="dcloud-descriptions-header"
    >
      <div
        class="dcloud-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="dcloud-descriptions-view"
    >
      <table>
        <tbody>
          <tr
            class="dcloud-descriptions-row"
          >
            <th
              class="dcloud-descriptions-item-label"
              colspan="1"
            >
              <span>
                Product
              </span>
            </th>
            <th
              class="dcloud-descriptions-item-label"
              colspan="1"
            >
              <span>
                Billing Mode
              </span>
            </th>
            <th
              class="dcloud-descriptions-item-label"
              colspan="1"
            >
              <span>
                Automatic Renewal
              </span>
            </th>
          </tr>
          <tr
            class="dcloud-descriptions-row"
          >
            <td
              class="dcloud-descriptions-item-content"
              colspan="1"
            >
              <span>
                Cloud Database
              </span>
            </td>
            <td
              class="dcloud-descriptions-item-content"
              colspan="1"
            >
              <span>
                Prepaid
              </span>
            </td>
            <td
              class="dcloud-descriptions-item-content"
              colspan="1"
            >
              <span>
                YES
              </span>
            </td>
          </tr>
          <tr
            class="dcloud-descriptions-row"
          >
            <th
              class="dcloud-descriptions-item-label"
              colspan="1"
            >
              <span>
                Order time
              </span>
            </th>
            <th
              class="dcloud-descriptions-item-label"
              colspan="2"
            >
              <span>
                Usage Time
              </span>
            </th>
          </tr>
          <tr
            class="dcloud-descriptions-row"
          >
            <td
              class="dcloud-descriptions-item-content"
              colspan="1"
            >
              <span>
                2018-04-24 18:00:00
              </span>
            </td>
            <td
              class="dcloud-descriptions-item-content"
              colspan="2"
            >
              <span>
                2019-04-24 18:00:00
              </span>
            </td>
          </tr>
          <tr
            class="dcloud-descriptions-row"
          >
            <th
              class="dcloud-descriptions-item-label"
              colspan="3"
            >
              <span>
                Status
              </span>
            </th>
          </tr>
          <tr
            class="dcloud-descriptions-row"
          >
            <td
              class="dcloud-descriptions-item-content"
              colspan="3"
            >
              <span>
                <span
                  class="dcloud-badge dcloud-badge-status dcloud-badge-not-a-wrapper"
                >
                  <span
                    class="dcloud-badge-status-dot dcloud-badge-status-processing"
                  />
                  <span
                    class="dcloud-badge-status-text"
                  >
                    Running
                  </span>
                </span>
              </span>
            </td>
          </tr>
          <tr
            class="dcloud-descriptions-row"
          >
            <th
              class="dcloud-descriptions-item-label"
              colspan="1"
            >
              <span>
                Negotiated Amount
              </span>
            </th>
            <th
              class="dcloud-descriptions-item-label"
              colspan="1"
            >
              <span>
                Discount
              </span>
            </th>
            <th
              class="dcloud-descriptions-item-label"
              colspan="1"
            >
              <span>
                Official Receipts
              </span>
            </th>
          </tr>
          <tr
            class="dcloud-descriptions-row"
          >
            <td
              class="dcloud-descriptions-item-content"
              colspan="1"
            >
              <span>
                $80.00
              </span>
            </td>
            <td
              class="dcloud-descriptions-item-content"
              colspan="1"
            >
              <span>
                $20.00
              </span>
            </td>
            <td
              class="dcloud-descriptions-item-content"
              colspan="1"
            >
              <span>
                $60.00
              </span>
            </td>
          </tr>
          <tr
            class="dcloud-descriptions-row"
          >
            <th
              class="dcloud-descriptions-item-label"
              colspan="3"
            >
              <span>
                Config Info
              </span>
            </th>
          </tr>
          <tr
            class="dcloud-descriptions-row"
          >
            <td
              class="dcloud-descriptions-item-content"
              colspan="3"
            >
              <span>
                Data disk type: MongoDB
                <br />
                Database version: 3.4
                <br />
                Package: dds.mongo.mid
                <br />
                Storage space: 10 GB
                <br />
                Replication factor: 3
                <br />
                Region: East China 1
                <br />
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
